Request to open deposits